# Frappe_Kit

./: .gitignore  README.md  pyproject.toml
frappe_kit/: hooks.py  modules.txt
frappe_kit/frappe_kit/: events.py  tasks.py
frappe_kit/frappe_kit/api/: conversion.py  provisioning.py  public.py
frappe_kit/frappe_kit/doctype/conversion_request/: conversion_request.js  conversion_request.json  conversion_request.py
frappe_kit/frappe_kit/doctype/demo_request/: demo_request.js  demo_request.json  demo_request.py
frappe_kit/frappe_kit/doctype/demo_request_module/: demo_request_module.json  demo_request_module.py
frappe_kit/frappe_kit/doctype/demo_site/: demo_site.js  demo_site.json  demo_site.py
frappe_kit/frappe_kit/doctype/industry_demo_scenario/: industry_demo_scenario.json  industry_demo_scenario.py
frappe_kit/frappe_kit/doctype/industry_template/: industry_template.json  industry_template.py
frappe_kit/frappe_kit/doctype/package_tier/: package_tier.json  package_tier.py
frappe_kit/frappe_kit/doctype/package_tier_app/: package_tier_app.json  package_tier_app.py
frappe_kit/frappe_kit/doctype/production_plan_option/: production_plan_option.json  production_plan_option.py
frappe_kit/frappe_kit/doctype/provisioner_settings/: provisioner_settings.json  provisioner_settings.py
frappe_kit/frappe_kit/templates/sample_data/: distribution.json  manufacturing.json  (+2 more)
frappe_kit/frappe_kit/tests/: test_demo_request.py
frappe_kit/public/css/: frappe_kit.css
frappe_kit/public/js/: frappe_kit.js
frappe_kit/www/: convert.html  convert.py  demo.html  demo.py
