[project]
name = "frappe_kit"
authors = [
    { name = "Your Company", email = "hello@yourcompany.com" }
]
description = "Self-service demo site provisioning for Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"

[project.urls]
Homepage = "https://github.com/chinmaybhatk/Frappe_Kit"
Repository = "https://github.com/chinmaybhatk/Frappe_Kit.git"
